# PreviousExam

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
ch2/: CMakeLists.txt  deleterepeatnode.c  intersectlist.c  linklist_search_k.c  majorityelem.c  midnumber.c  mindistance.c  miniumelem.c  reoederlist.c  reverse.c
ch5/: CMakeLists.txt  ans.c  judgebst.c  wpl.c
ch6/: CMakeLists.txt  IsExistEL.c  printvertices.c
ch8/: CMakeLists.txt  setparation.c
commonstruct/: CMakeLists.txt  amgraph.c  completetree.c  create_thread_tree.c  heapsort.c  heapsort_cs.c  inorder_ recursion.c  insert_delete.c  levelorder.c  link_insert_delete.c  link_notheadnode.c  link_tree.c  postorder_recursion.c  preorder_ recursion.c  quick_sort.c  threadtree.c
include/: ch2.h  ch5.h  ch6.h  ch8.h  commonstruct.h  stdtypedef.h  swap.h
test/: CMakeLists.txt  main.c
